main.tf
resource "aws_vpc" "custom_vpc" {
  cidr_block = var.vpc_cidr
  enable_dns_hostnames = true
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.custom_vpc.id
}

resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.custom_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id

  }
}

resource "aws_subnet" "public_subnet1" {
  vpc_id     = aws_vpc.custom_vpc.id
  cidr_block = var.subnet1_cidr
  availability_zone = var.az1
  map_public_ip_on_launch = true
}

resource "aws_subnet" "private_subnet1" {
  vpc_id     = aws_vpc.custom_vpc.id
  cidr_block = var.subnet2_cidr
  availability_zone = var.az1
}

resource "aws_subnet" "public_subnet2" {
  vpc_id     = aws_vpc.custom_vpc.id
  cidr_block = var.subnet3_cidr
  availability_zone = var.az2
  map_public_ip_on_launch = true
}

resource "aws_subnet" "private_subnet2" {
  vpc_id     = aws_vpc.custom_vpc.id
  cidr_block = var.subnet4_cidr
  availability_zone = var.az2
}

resource "aws_route_table_association" "publicSubnet1_association" {
  subnet_id      = aws_subnet.public_subnet1.id
  route_table_id = aws_route_table.public_rt.id
}

resource "aws_route_table_association" "publicSubnet2_association" {
  subnet_id      = aws_subnet.public_subnet2_id
  route_table_id = aws_route_table.public_rt.id
}

resource "aws_security_group" "alb_sg" {
  name        = "alb_sg"
  description = "Allow 80, 443 inbound traffic"
  vpc_id      = aws_vpc.custom_vpc.id
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aec2_security_group" "alb_sg" {
  name        = "aec2_sg"
  description = "Allow 80, 443 inbound traffic"
  vpc_id      = aws_vpc.custom_vpc.id
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "rds_sg" {
  name        = "rds_sg"
  description = "Allow 80, 443 inbound traffic"
  vpc_id      = aws_vpc.custom_vpc.id
  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
